Fix for end of eyesea title displaying off screen.

--- a/uclient/styles/main.scss
+++ b/uclient/styles/main.scss
@@ -74,7 +74,7 @@ h1 {
   font-size: 5em;
   font-variant: small-caps;
   line-height: 1em;
-  text-indent: -100%;
+  text-indent: -1000%;
   background: url('../images/logo.png') 0 0 / auto 100% no-repeat;
 }
 
